--- a/aria-practices.html
+++ b/aria-practices.html
@@ -480,16 +480,11 @@
     
     <section class="widget" id="carousel">
       <h3>Carousel (Slide Show or Image Rotator)</h3>
-      <p class="ednote">
-        This is a draft pattern that is being actively revised.
-        Please provide feedback in
-        <a href="https://github.com/w3c/aria-practices/issues/43">issue 43.</a>
-      </p>
       <p>
-        A carousel presents a set of items, referred to as slides, by rotating one or more of the slides into view.
-        Typically, only one slide is displayed at a time.
-        While a slide may contain any type of content, image carousels where each slide contains nothing more than a single image are common.
+        A carousel presents a set of items, referred to as slides, by sequentially displaying a subset of one or more slides.
+        Typically, one slide is displayed at a time, and users can activate a next or previous slide control that hides the current slide and &quot;rotates&quot; the next or previous slide into view.
         In some implementations, rotation automatically starts when the page loads, and it may also automatically stop once all the slides have been displayed.
+        While a slide may contain any type of content, image carousels where each slide contains nothing more than a single image are common.
       </p>
       <p>
         Ensuring all users can easily control and are not adversely effected by slide rotation is an essential aspect of making carousels accessible.
