Enter and Space need to uncheck checked button before checking focused button.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2047,8 +2047,8 @@
             The keyboard interaction of a radio group nested in a toolbar is as follows.
           </p>
           <ul>
-            <li><kbd>Space</kbd>: checks the focused radio button if it is not checked. Otherwise, does nothing.</li>
-            <li><kbd>Enter</kbd> (optional): checks the focused radio button if it is not already checked.</li>
+            <li><kbd>Space</kbd>: If the focused radio button is not checked, unchecks the currently checked radio button and checks the focused radio button. Otherwise, does nothing.</li>
+            <li><kbd>Enter</kbd> (optional): If the focused radio button is not checked, unchecks the currently checked radio button and checks the focused radio button. Otherwise, does nothing.</li>
             <li><kbd>Right Arrow</kbd>:
               <ul>
                 <li>When focus is on a radio button and that radio button is <strong>not</strong> the last radio button in the radio group, moves focus to the next radio button.</li>
